Set fixed positioning and z-index for mobile menu.

--- a/style.css
+++ b/style.css
@@ -26,8 +26,41 @@ body {
   width: 88%;
 }
 
+.mobile_navbar_li ul {
+  margin-top: 90px;
+  list-style-type: none;
+  width: 351px;
+  height: 184px;
+}
+
+.mobile_navbar_li ul a {
+  display: flex;
+  gap: 90rem;
+  margin: 30px;
+  font-size: 4rem;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+}
+
 .mobile_navbar_li {
-  display: none;
+  font-weight: 600;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0f0f1b;
+  z-index: 2000;
+  padding: 5px;
+}
+
+.mobile_navbar_li_btn {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 2001;
+  display: block;
 }
 
 .active {
@@ -35,12 +68,12 @@ body {
 }
 
 .close-btn {
-  display: block;
-  float: right;
+  padding: 20px;
   background: none;
-  font-size: 3rem;
-  color: white;
   border: none;
+  color: white;
+  font-size: 5rem;
+  cursor: pointer;
 }
 
 .desktop-nav {
